--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,7 @@
 RewriteEngine On
 Options -Indexes
 
-RewriteRule ^(.*)/server/$ server.php?id=$1 [QSA,L]
+RewriteRule ^server/(.*) server?id=$1 [QSA,L]
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.php -f
