--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,7 @@
 RewriteEngine On
 Options -Indexes
 
-RewriteRule ^server/(\d+)$ /server?id=$1 [QSA,L]
+RewriteRule ^server/(.*)$ /server?id=$1 [QSA]
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.php -f
@@ -13,7 +13,7 @@ RewriteCond %{REQUEST_FILENAME}\html -f
 RewriteRule ^(.*)$ $1.html
 
 RewriteCond %{THE_REQUEST} \.(php|html)\ HTTP
-RewriteRule ^(.*)\.(php|html)$ /$1 [R=301,L]
+RewriteRule ^(.*)\.(php|html)$ /$1 [R=301]
 
 ErrorDocument 404 404.html
 </IfModule>
